# Ultra-Air-Arcade

./: .gitignore  CMakeLists.txt  Makefile  README.md
CPE476/Terrain/: Camera.cpp  Makefile  Terrain.h  a.out
Gradebook/: ._AppDelegate.swift  ._ViewController.swift  AppDelegate.swift  Info.plist  ViewController.swift
Gradebook.xcodeproj/: project.pbxproj
Gradebook/Base.lproj/: ._LaunchScreen.xib  ._Main.storyboard  LaunchScreen.xib
GradebookTests/: ._GradebookTests.swift  GradebookTests.swift  Info.plist
Terrain/: Camera.h  GLSL.cpp  Makefile  Terrain.cpp  Terrain.h  lab6_frag.glsl  lab6_vert.glsl  main.cpp
labs/AKRMLab1/: AABB.cpp  AABB.h  Camera.cpp  Camera.h  Object.cpp  Object.h  TimeManager.cpp  TimeManager.h  draw.h  frag.glsl  main.cpp  tiny_obj_loader.cc  vert.glsl
labs/DTZWLab1/: Character.hpp  Collision.hpp  GLIncludes.h  Makefile  frag.glsl  helper.cpp  helper.h  main.cpp  shader.cpp  shader.hpp  text2D.cpp  text2D.hpp  texture.cpp  texture.hpp  types.h  vert.glsl
src/: #Makefile#  Billboard.hpp  BoundingSphere.cpp  BoundingSphere.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Character.hpp  Collision.hpp  CookTorranceMaterial.hpp  DrawText.cpp  DrawText.h  Effect.hpp  Entity.hpp  Explosion.hpp  Frustum.cpp  Frustum.h  GLSL.cpp  GLSL.h  GLSLProgram.cpp  GLSLProgram.h  HUD.h  Makefile  Makefile~  Materials.hpp  MatrixStack.cpp  MatrixStack.h  Particle.hpp  PlaneData.h  PlaneSound.hpp  Program.cpp  Program.h  Projectile.hpp  RacerAI.hpp  Rules.hpp  Scenery.hpp  ShapeObj.cpp  ShapeObj.h  (+14 more)
src/ext/: imageloader.h
src/shd/: TextVertexShader.fragmentshader  TextVertexShader.vertexshader  basic.frag  basic.vert  cloud_frag.glsl  depthmap_frag.glsl  depthmap_vert.glsl  frag.glsl  particle_frag.glsl  particle_vert.glsl  propShader.frag  propShader.vert  renderscene_frag.glsl  renderscene_vert.glsl  shadowmap_frag.glsl  shadowmap_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  text.f.glsl  text.v.glsl  toon.frag  toon.vert  vert.glsl
www/: index.html
(+16 files in other folders)
